--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,8 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
-banner: 'default'
+heading: "Nveloper's Note"
+subheading: '보고 배운 것들을 기록합니다.'
+banner: ''
 ---
 
 {{ content }}
