--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -9,8 +9,9 @@
 
 // Define defaults for each variable.
 
-$base-font-family: Helvetica Neue, Helvetica, Arial, sans-serif, !default;
-$base-font-size: 14px !default;
+//$base-font-family: Helvetica Neue, Helvetica, Arial, sans-serif, !default;
+$base-font-family: Product Sans, sans-serif, !default;
+$base-font-size: 18px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.6 !default;
