--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,14 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
+body {
+  font-family: 'Product Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Product Sans', sans-serif; /* 제목에도 적용하고 싶다면 */
+}
+
 // Default theme colors
 $theme-colors: (
   "coolblack": #090a0b,
