--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,7 @@
   {%- include extensions/code-highlight.html -%}
   {%- include extensions/photo-swipe.html -%}
   {%- include custom-head.html -%}
+  <meta property="og:image" content="https://nveloper.github.io/assets/images/banners/General Wallpaper.jpg" />
+  <meta property="og:title" content="Nveloper's Note" />
+  <meta property="og:description" content="여러 글 써보기" />
 </head>
